Fix CI failures